--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,9 @@
 html {
   height: 100%;
 }
+img {
+    max-width: 100%;
+}
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: white;
@@ -37,4 +40,10 @@ header {
 .contenedor{
     max-width: 1200px;
     margin: 0 auto;
+}
+.main h2{
+    text-align: center;
+    padding: 10px 0;
+    font-size: 30px;
+    text-transform: uppercase;
 }
