--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,12 +1,16 @@
 html {
   height: 100%;
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
   height: 100%;
   /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#22aa4f+0,6f79ce+65&1+0,0.65+99,1+100,0.65+100,1+100,0.65+100,0.7+100,0+100,1+100 */
   background: -moz-linear-gradient(
@@ -37,13 +41,53 @@ header {
   text-align: center;
   padding: 2rem 0;
 }
-.contenedor{
-    max-width: 1200px;
-    margin: 0 auto;
+.contenedor {
+  max-width: 1200px;
+  margin: 0 auto;
 }
-.main h2{
-    text-align: center;
-    padding: 10px 0;
-    font-size: 30px;
-    text-transform: uppercase;
+.main h2 {
+  text-align: center;
+  padding: 10px 0;
+  font-size: 30px;
+  text-transform: uppercase;
+}
+.lista-productos {
+  display: flex;
+  justify-content: space-evenly;
+  column-gap: 20px;
+  flex-wrap: wrap;
+  padding: 0;
+}
+.lista-productos li {
+  list-style: none;
+  padding: 10px 0;
+  text-align: center;
+  font-size: 30px;
+}
+
+li img{
+    border-width: 15px;
+    border-color: blueviolet;
+    border-style: inset;
+}
+li img:hover{
+    border-color: #6c05cc;
+    transition-delay: 0.5ms;
+}
+.lista-productos p{
+    padding: 5px 0;
+    margin: 0;
+    font-size: 40px;
+}
+
+.boton{
+    background-color: yellowgreen;
+    display: inline-block;
+    max-width: 200px;
+    padding: 1rem 2rem;
+    text-decoration: none;
+    color: #b6b603;
+}
+.boton:hover{
+    color: yellow;
 }
